js262/test/language/statements/using/syntax/with-initializer-if-expression-statement.js


/*---
esid: sec-if-statement
description: >
    using declarations with initialisers in statement positions:
    if ( Expression ) Statement
negative:
  phase: parse
  type: SyntaxError
features: [explicit-resource-management]
---*/

$DONOTEVALUATE();
if (true) using x = null;
